--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  <header class="position-fixed" style="width: 100%;">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light " aria-label="Tenth navbar example">
+  <header class="position-fixed fixed-top" style="width: 100%;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top " aria-label="Tenth navbar example">
       <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08"
           aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
